Redux: Add foundation and home page

--- a/WitcheryResurrectedWeb/ClientApp/public/index.html
+++ b/WitcheryResurrectedWeb/ClientApp/public/index.html
@@ -10,13 +10,15 @@
       content="Witchery: Resurrected aims to recreate and improve the popular Witchery mod in modern versions; with a focus on customizability."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/images/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/assets/manifest.json" />
+    <link rel='manifest' href='%PUBLIC_URL%/manifest.json' />
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/main.css">
 
     <title>Witchery: Resurrected</title>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
   </body>
 </html>
