--- a/WitcheryResurrectedWeb/ClientApp/public/index.html
+++ b/WitcheryResurrectedWeb/ClientApp/public/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
-    <meta charset='utf-8' />
+    <meta charset='utf-8'/>
     <link rel='icon' href='%PUBLIC_URL%/assets/images/favicon.ico'/>
     <meta name='viewport' content='width=device-width, initial-scale=1'/>
-    <meta name='theme-color' content='#000000'/>
+    <meta name='theme-color' content='#7a2a91'/>
     <meta
       name='description'
       content='Witchery: Resurrected aims to recreate and improve the popular Witchery mod in modern versions; with a focus on customizability.'
     />
     <link rel='apple-touch-icon' href='%PUBLIC_URL%/assets/images/logo192.png'/>
     <link rel='manifest' href='%PUBLIC_URL%/manifest.json' />
-    <link rel='stylesheet' type='text/css' href='%PUBLIC_URL%/assets/css/main.css'>
 
     <title>Witchery: Resurrected</title>
   </head>
