--- a/WitcheryResurrectedWeb/ClientApp/index.html
+++ b/WitcheryResurrectedWeb/ClientApp/index.html
@@ -2,15 +2,15 @@
 <html lang='en'>
   <head>
     <meta charset='utf-8'/>
-    <link rel='icon' href='%PUBLIC_URL%/assets/images/favicon.ico'/>
+    <link rel='icon' href='/assets/images/favicon.ico'/>
     <meta name='viewport' content='width=device-width, initial-scale=1'/>
     <meta name='theme-color' content='#7a2a91'/>
     <meta
       name='description'
       content='Witchery: Resurrected aims to recreate and improve the popular Witchery mod in modern versions; with a focus on customizability.'
     />
-    <link rel='apple-touch-icon' href='%PUBLIC_URL%/assets/images/logo192.png'/>
-    <link rel='manifest' href='%PUBLIC_URL%/manifest.json' />
+    <link rel='apple-touch-icon' href='/assets/images/logo192.png'/>
+    <link rel='manifest' href='/manifest.json' />
 
     <title>Witchery: Resurrected</title>
   </head>
@@ -19,5 +19,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id='root'/>
+
+    <script type='module' src='/src/index.jsx'></script>
   </body>
 </html>
